recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:7: error: not found: value avancer
     avancer(length)
     ^